// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error-catcher.ts Lambda accepts a CloudWatch log message 1`] = `
{
  "body": "*123456789012* - The following errors were detected:

_2024-05-04T04:41:33.937Z_ (<https://us-east-1.console.aws.amazon.com/cloudwatch/home?region=us-east-1#logsV2:log-groups/log-group/$252Faws$252Flambda$252Fkiwi-blog-0009-cdk-lambda-error-catchertest-lambda-json/log-events/2024$252F05$252F04$252F$255B$2524LATEST$255Db160e8ab93984ad2b4712c478779c545$3Fstart$3D1714797692937$26refEventId$3D38241266439516937806054119273176397097372920146847596545|Open CloudWatch logs>)
\`\`\`
{
  errorType: 'Error',
  errorMessage: 'This error was thrown!',
  stackTrace: [
    'Error: This error was thrown!',
    '    at Runtime.handler (/var/task/index.js:28:11)',
    '    at Runtime.handleOnceNonStreaming (file:///var/runtime/index.mjs:1173:29)'
  ]
}
\`\`\`",
  "title": "🚨 Lambda error: kiwi-blog-0009-cdk-lambda-error-catchertest-lambda-json",
}
`;

exports[`error-catcher.ts Lambda prettifies correctly the messages (0) 1`] = `
"_2024-05-04T04:47:56.437Z_ (<https://mylogs.com$3Fstart$3D1714798075437$26refEventId$3D38241274969551976244017471362271343276524099733197750274|Open CloudWatch logs>)
\`\`\`
Invoke Error 	{"errorType":"Error","errorMessage":"This error was thrown!","stack":["Error: This error was thrown!","    at Runtime.handler (/var/task/index.js:28:11)","    at Runtime.handleOnceNonStreaming (file:///var/runtime/index.mjs:1173:29)"]}
\`\`\`"
`;

exports[`error-catcher.ts Lambda prettifies correctly the messages (1) 1`] = `
"_2024-05-04T04:53:42.156Z_ (<https://mylogs.com$3Fstart$3D1714798421156$26refEventId$3D38241282679343305534825973659543398526898726925601406977|Open CloudWatch logs>)
\`\`\`
{
  errorType: 'Error',
  errorMessage: 'This error was thrown!',
  stackTrace: [
    'Error: This error was thrown!',
    '    at Runtime.handler (/var/task/index.js:28:11)',
    '    at Runtime.handleOnceNonStreaming (file:///var/runtime/index.mjs:1173:29)'
  ]
}
\`\`\`"
`;
